--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -30,14 +30,14 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId 'de.rki.coronawarnapp'
+        applicationId 'be.sciensano.coronalert'
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 35
         versionName "1.2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        
+
         resConfigs "de", "en", "tr", "bg", "pl", "ro"
 
         buildConfigField "String", "DOWNLOAD_CDN_URL", "\"$DOWNLOAD_CDN_URL\""
@@ -92,12 +92,12 @@ android {
         device {
             dimension "version"
             buildConfigField "String", "BUILD_VARIANT", "\"device\""
-            resValue "string", "app_name", "Corona-Warn"
+            resValue "string", "app_name", "Coronalert"
         }
         deviceForTesters {
             dimension "version"
             buildConfigField "String", "BUILD_VARIANT", "\"deviceForTesters\""
-            resValue "string", "app_name", "CWA TEST"
+            resValue "string", "app_name", "Coronalert TEST"
             applicationIdSuffix '.dev'
 
             def environmentPropertiesFile = project.rootProject.file('environment.properties')
@@ -205,10 +205,10 @@ task jacocoTestReportDeviceRelease(type: JacocoReport, dependsOn: 'testDeviceRel
     ]
 
     def classPaths = [
-        "**/intermediates/classes/deviceRelease/**",
-        "**/intermediates/javac/deviceRelease/*/classes/**", // Android Gradle Plugin 3.2.x support.
-        "**/intermediates/javac/deviceRelease/classes/**", // Android Gradle Plugin 3.4 and 3.5 support.
-        "**/tmp/kotlin-classes/deviceRelease/**"
+            "**/intermediates/classes/deviceRelease/**",
+            "**/intermediates/javac/deviceRelease/*/classes/**", // Android Gradle Plugin 3.2.x support.
+            "**/intermediates/javac/deviceRelease/classes/**", // Android Gradle Plugin 3.4 and 3.5 support.
+            "**/tmp/kotlin-classes/deviceRelease/**"
     ]
 
     def debugTree = fileTree(dir: "$buildDir", includes: classPaths, excludes: excludes)
