--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=covid-be-app_cwa-app-android
+sonar.organization=coronalert
 sonar.host.url=https://sonarcloud.io
 sonar.coverage.jacoco.xmlReportPaths=Corona-Warn-App/build/reports/jacoco/deviceRelease/jacoco.xml
 sonar.sources=Corona-Warn-App/src/main/java/
