Chore/cba 180 ci (#8)
* remove signingConfig

* sonar cloud config update

* disable klint for now

* sonar cloud config update

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=corona-warn-app_cwa-app-android
-sonar.organization=corona-warn-app
+sonar.projectKey=covid-be-app_cwa-app-android
+sonar.organization=coronalert
 sonar.host.url=https://sonarcloud.io
 sonar.coverage.jacoco.xmlReportPaths=Corona-Warn-App/build/reports/jacoco/deviceRelease/jacoco.xml
 sonar.sources=Corona-Warn-App/src/main/java/
