--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -33,8 +33,8 @@ android {
         applicationId 'be.sciensano.coronalert'
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 39
-        versionName "1.2.4"
+        versionCode 40
+        versionName "1.2.3-test"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
