--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -43,6 +43,7 @@ android {
         buildConfigField "String", "DOWNLOAD_CDN_URL", "\"$DOWNLOAD_CDN_URL\""
         buildConfigField "String", "SUBMISSION_CDN_URL", "\"$SUBMISSION_CDN_URL\""
         buildConfigField "String", "VERIFICATION_CDN_URL", "\"$VERIFICATION_CDN_URL\""
+        buildConfigField "String", "STATISTICS_CDN_URL", "\"$STATISTICS_CDN_URL\""
         buildConfigField "String", "PUB_KEYS_SIGNATURE_VERIFICATION", "\"$PUB_KEYS_SIGNATURE_VERIFICATION\""
 
         //override URLs. Use local.properties if exist.
@@ -68,6 +69,10 @@ android {
             def PUB_KEYS_SIGNATURE_VERIFICATION = overridingProperties.getProperty('PUB_KEYS_SIGNATURE_VERIFICATION')
             if (PUB_KEYS_SIGNATURE_VERIFICATION)
                 buildConfigField "String", "PUB_KEYS_SIGNATURE_VERIFICATION", "\"$PUB_KEYS_SIGNATURE_VERIFICATION\""
+
+            def STATISTICS_CDN_URL = overridingProperties.getProperty('STATISTICS_CDN_URL')
+            if (PUB_KEYS_SIGNATURE_VERIFICATION)
+                buildConfigField "String", "STATISTICS_CDN_URL", "\"$STATISTICS_CDN_URL\""
         }
 
         javaCompileOptions {
@@ -118,6 +123,10 @@ android {
                 def PUB_KEYS_SIGNATURE_VERIFICATION = overridingProperties.getProperty('PUB_KEYS_SIGNATURE_VERIFICATION')
                 if (PUB_KEYS_SIGNATURE_VERIFICATION)
                     buildConfigField "String", "PUB_KEYS_SIGNATURE_VERIFICATION", "\"$PUB_KEYS_SIGNATURE_VERIFICATION\""
+
+                def STATISTICS_CDN_URL = overridingProperties.getProperty('STATISTICS_CDN_URL')
+                if (PUB_KEYS_SIGNATURE_VERIFICATION)
+                    buildConfigField "String", "STATISTICS_CDN_URL", "\"$STATISTICS_CDN_URL\""
             }
         }
     }
