--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -71,7 +71,7 @@ android {
                 buildConfigField "String", "PUB_KEYS_SIGNATURE_VERIFICATION", "\"$PUB_KEYS_SIGNATURE_VERIFICATION\""
 
             def STATISTICS_CDN_URL = overridingProperties.getProperty('STATISTICS_CDN_URL')
-            if (PUB_KEYS_SIGNATURE_VERIFICATION)
+            if (STATISTICS_CDN_URL)
                 buildConfigField "String", "STATISTICS_CDN_URL", "\"$STATISTICS_CDN_URL\""
         }
 
@@ -125,7 +125,7 @@ android {
                     buildConfigField "String", "PUB_KEYS_SIGNATURE_VERIFICATION", "\"$PUB_KEYS_SIGNATURE_VERIFICATION\""
 
                 def STATISTICS_CDN_URL = overridingProperties.getProperty('STATISTICS_CDN_URL')
-                if (PUB_KEYS_SIGNATURE_VERIFICATION)
+                if (STATISTICS_CDN_URL)
                     buildConfigField "String", "STATISTICS_CDN_URL", "\"$STATISTICS_CDN_URL\""
             }
         }
