--- a/Corona-Warn-App/src/main/AndroidManifest.xml
+++ b/Corona-Warn-App/src/main/AndroidManifest.xml
@@ -57,12 +57,48 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="staging.coronalert.be"
+                    android:path="/en/corona-alert-form/"
+                    android:scheme="https" />
+                <data
+                    android:host="staging.coronalert.be"
+                    android:path="/de/coronalert-formular/"
+                    android:scheme="https" />
+                <data
+                    android:host="staging.coronalert.be"
+                    android:path="/fr/formulaire-coronalert/"
+                    android:scheme="https" />
+                <data
+                    android:host="staging.coronalert.be"
+                    android:path="/nl/coronalert-formulier/"
+                    android:scheme="https" />
+            </intent-filter>
+
         </activity>
+
+        <activity
+            android:name="be.sciensano.coronalert.ui.LinkTestActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Main">
+
+
+        </activity>
+
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Main" />
+            android:theme="@style/AppTheme.Main">
+
+        </activity>
         <activity
             android:name=".ui.onboarding.OnboardingActivity"
             android:exported="false"
@@ -73,6 +109,7 @@
             android:exported="false"
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
+
     </application>
 
 </manifest>
