--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -247,7 +247,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation 'androidx.work:work-runtime-ktx:2.3.4'
+    implementation 'androidx.work:work-runtime-ktx:2.5.0-beta01'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.annotation:annotation:1.1.0'
 
@@ -282,7 +282,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:17.3.0'
     implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
     implementation 'com.google.android.gms:play-services-tasks:17.1.0'
-    api fileTree(dir: 'libs', include: ['play-services-nearby-18.0.3-eap.aar'])
+    api fileTree(dir: 'libs', include: ['play-services-nearby-exposurenotification-1.7.2-eap.aar'])
 
     // HTTP
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
